@@ -1,50 +1,50 @@
 use alienfile;
-use File::Which qw( which );
-use Capture::Tiny qw( capture );
-use List::Util qw( all );
-use Sort::Versions qw( versioncmp );
+#use File::Which qw( which );
+#use Capture::Tiny qw( capture );
+#use List::Util qw( all );
+#use Sort::Versions qw( versioncmp );
 
-configure {
-  requires 'File::Which';
-  requires 'Capture::Tiny';
-  requires 'Sort::Versions';
-};
+#configure {
+#  requires 'File::Which';
+#  requires 'Capture::Tiny';
+#  requires 'Sort::Versions';
+#};
 
 probe sub {
   my($build) = @_;
 
-  my %tools;
-  
-  foreach my $tool (qw( autoconf autoheader autom4te autoreconf autoscan autoupdate ifnames ))
-  {
-    $tools{$tool} = 0;
-    my $exe = which $tool;
-    if($exe)
-    {
-      my(undef, undef, $stdout) = capture {
-        `$tool --version`;
-      };
-      
-      if($stdout =~ /GNU Autoconf/ && $stdout =~ /([0-9\.]+)$/)
-      {
-        my $version = $1;
-        if(versioncmp($version, '2.69') >= 0)
-        {
-          $tools{$tool} = $version;
-        }
-      }
-    }
-  }
-
-  if(all { $_ != 0 } values %tools)
-  {
-    my($version) = values %tools;
-    if(all { $_ == $version } values %tools)
-    {
-      $build->install_prop->{my_version} = $version;
-      return 'system';
-    }
-  }
+#  my %tools;
+#  
+#  foreach my $tool (qw( autoconf autoheader autom4te autoreconf autoscan autoupdate ifnames ))
+#  {
+#    $tools{$tool} = 0;
+#    my $exe = which $tool;
+#    if($exe)
+#    {
+#      my(undef, undef, $stdout) = capture {
+#        `$tool --version`;
+#      };
+#      
+#      if($stdout =~ /GNU Autoconf/ && $stdout =~ /([0-9\.]+)$/)
+#      {
+#        my $version = $1;
+#        if(versioncmp($version, '2.69') >= 0)
+#        {
+#          $tools{$tool} = $version;
+#        }
+#      }
+#    }
+#  }
+#
+#  if(all { $_ != 0 } values %tools)
+#  {
+#    my($version) = values %tools;
+#    if(all { $_ == $version } values %tools)
+#    {
+#      $build->install_prop->{my_version} = $version;
+#      return 'system';
+#    }
+#  }
 
   'share';
 };
@@ -145,11 +145,11 @@ share {
   );
 };
 
-sys {
-
-  gather sub {
-    my($build) = @_;
-    $build->runtime_prop->{version} = $build->install_prop->{my_version};
-  };
-
-};
+#sys {
+#
+#  gather sub {
+#    my($build) = @_;
+#    $build->runtime_prop->{version} = $build->install_prop->{my_version};
+#  };
+#
+#};
