@@ -5,10 +5,6 @@ copyright_holder = Graham Ollis
 copyright_year   = 2017
 version          = 0.10_01
 
-[AlienBase::Doc]
-name=autoconf
-type=tool
-
 [@Author::Plicease]
 :version      = 2.12
 travis_status = 1
