@@ -15,12 +15,9 @@ $modules{$_} = $_ for qw(
   Alien::Build::MM
   Alien::Build::Plugin::Build::Autoconf
   Alien::Build::Plugin::Build::MSYS
-  Capture::Tiny
   ExtUtils::MakeMaker
-  File::Which
   File::chdir
   Path::Tiny
-  Sort::Versions
   Test2::V0
   Test::Alien
 );
